--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Valter</a>
+            <a href="https://www.linkedin.com/in/valter-silva-5a44b1171/" class="nav__logo">Valter Silva</a>
 
             <div class="nav__menu">
                 <ul class="nav__list">
@@ -67,14 +67,14 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div class="home__data">
-                    <span class="home__greeting">Hello, I'm</span>
+                    <span class="home__greeting">Olá, eu sou</span>
                     <h1 class="home__name">Valter Silva</h1>
                     <h3 class="home__education">java web developer ☕</h3>
                     <div class="home__buttons">
                         <a download="" href="./assets/pdf/Valter.pdf" class="button button--ghost">
                             Download CV
                         </a>
-                        <a href="#about" class="button">About me</a>
+                        <a href="#about" class="button">Sobre mim</a>
                     </div>
                 </div>
 
@@ -104,8 +104,8 @@
 
         <!--=============== ABOUT ===============-->
         <section class="about section" id="about">
-            <span class="section__subtitle">My intro</span>
-            <h2 class="section__title">About me</h2>
+            <span class="section__subtitle">Em busca de me tornar especialista em java</span>
+            <h2 class="section__title">Sobre mim</h2>
 
             <div class="about__container container grid">
                 <img src="./assets/img/aboutme.png" alt="" class="about__img">
@@ -113,20 +113,20 @@
                     <div class="about__info">
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
-                            <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">looking for</span>
+                            <h3 class="about__title">Experiência</h3>
+                            <span class="about__subtitle">Iniciando dev jr</span>
                         </div>
 
                         <div class="about__box">
-                            <i class='bx bx-briefcase-alt about__icon'></i>
-                            <h3 class="about__title">Completed</h3>
+                            <a href="#work"><i class='bx bx-briefcase-alt about__icon'></i></a>
+                            <h3 class="about__title">Projetos</h3>
                             <span class="about__subtitle">10 + projects</span>
                         </div>
 
                         <div class="about__box">
-                            <i class='bx bx-support about__icon'></i>
-                            <h3 class="about__title">Support</h3>
-                            <span class="about__subtitle">Online 24/7</span>
+                            <a href="#contact"><i class='bx bx-support about__icon'></i></a>
+                            <h3 class="about__title">Disponível</h3>
+                            <span class="about__subtitle">24/7</span>
                         </div>
                     </div>
 
@@ -142,15 +142,15 @@
                         o crescimento da comunidade como um todo e na evolução do mercado tecnológico no Brasil.
                     </p>
 
-                    <a href="#contact" class="button">Contact Me</a>
+                    <a href="#contact" class="button">Contatos</a>
                 </div>
             </div>
         </section>
 
         <!--=============== SKILLS ===============-->
         <section class="skills section" id="skills">
-            <span class="section__subtitle">My Abilities</span>
-            <h2 class="section__title">My Experience</h2>
+            <span class="section__subtitle">Minhas habilidades</span>
+            <h2 class="section__title">Minha experiência</h2>
 
             <div class="skills__container container grid">
                 <div class="skills__content">
@@ -184,7 +184,7 @@
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
                                     <h3 class="skills__name">TypeScript</h3>
-                                    <span class="skills__level">Basic</span>
+                                    <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
                         </div>
@@ -239,21 +239,21 @@
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
-                            <!-- <div class="skills__data">
+                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
                                     <h3 class="skills__name">MongoDB</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
 
                         <div class="skills__group">
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
-                                    <h3 class="skills__name">Spring-Boot</h3>
+                                    <h3 class="skills__name">Spring</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -396,10 +396,10 @@
 
         <!--=============== WORK ===============-->
         <section class="work section" id="work">
-            <span class="section__subtitle">My portfolio</span>
-            <h2 class="section__title">Recent Works</h2>
+            <span class="section__subtitle">Meu portfolio</span>
+            <h2 class="section__title">Projetos recentes</h2>   
             <div class="work__filters">
-                <span class="work__item active-work" data-filter="all">All</span>
+                <span class="work__item active-work" data-filter="all">todos</span>
                 <span class="work__item" data-filter=".api">Backend</span>
                 <span class="work__item" data-filter=".full">Fullstack</span>
                 <span class="work__item" data-filter=".front">Frontend</span>
@@ -531,12 +531,12 @@
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
-            <span class="section__subtitle">Get in touch</span>
-            <h2 class="section__title">Contact me</h2>
+            <span class="section__subtitle">Entre em contato</span>
+            <h2 class="section__title">Vamos Conversar !</h2>
 
             <div class="contact__container container grid">
                 <div class="contact__content">
-                    <h3 class="contact__title">Talk to me</h3>
+                    <h3 class="contact__title">Meus contatos</h3>
 
                     <div class="contact__info">
                         <div class="contact__card">
@@ -545,7 +545,7 @@
                             <span class="contact__card-data">valter.silva.dev@gmail.com</span>
 
                             <a href="mailto:valter.silva.dev@gmail.com" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
+                                Envie um email <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
@@ -556,7 +556,7 @@
 
                             <a href="https://api.whatsapp.com/send?phone=5511983667289&text=Hello, more information!"
                                 target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
+                                Envie um zap se preferir <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
                     </div>
@@ -596,13 +596,13 @@
 
             <ul class="footer__list">
                 <li>
-                    <a href="#about" class="footer__link">About</a>
+                    <a href="#about" class="footer__link">Sobre</a>
                 </li>
                 <li>
-                    <a href="#work" class="footer__link">Projects</a>
+                    <a href="#work" class="footer__link">Projetos</a>
                 </li>
                 <li>
-                    <a href="#skill" class="footer__link">Experience</a>
+                    <a href="#skill" class="footer__link">Experiência</a>
                 </li>
             </ul>
 
