--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
                     <h3 class="work__title">Frontend</h3>
 
-                    <a href="https://xadrez-react.vercel.app" class="work__button">
+                    <a href="https://xadrez-react.vercel.app" target='_blank' class="work__button">
                         xadrez react aleatório <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -424,7 +424,7 @@
 
                     <h3 class="work__title">Frontend</h3>
 
-                    <a href="https://cronometro-vert.vercel.app" class="work__button">
+                    <a href="https://cronometro-vert.vercel.app" target='_blank' class="work__button">
                         Cronometro <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -434,7 +434,7 @@
 
                     <h3 class="work__title">Frontend</h3>
 
-                    <a href="https://desafio-qr-code.vercel.app" class="work__button">
+                    <a href="https://desafio-qr-code.vercel.app" target='_blank' class="work__button">
                         Desafios - Frontend <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -444,7 +444,7 @@
 
                     <h3 class="work__title">Fullstack</h3>
 
-                    <a href="https://urbanize.vercel.app/home" class="work__button">
+                    <a href="https://urbanize.vercel.app/home" target='_blank' class="work__button">
                         Urbanize <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -454,7 +454,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://valterchess.herokuapp.com/swagger-ui/" class="work__button">
+                    <a href="https://valterchess.herokuapp.com/swagger-ui/" target='_blank' class="work__button">
                         Valter Chess( admin: root. pass: root) <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -464,7 +464,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://peoplemanage.herokuapp.com/swagger-ui/#/" class="work__button">
+                    <a href="https://peoplemanage.herokuapp.com/swagger-ui/#/" target='_blank' class="work__button">
                         people manager - ( admin: root. pass: root) <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -474,7 +474,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://github.com/valterchess/digital-wallet" class="work__button">
+                    <a href="https://github.com/valterchess/digital-wallet" target='_blank' class="work__button">
                         digital-wallet <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -484,7 +484,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://github.com/valterchess/loja-games" class="work__button">
+                    <a href="https://github.com/valterchess/loja-games" target='_blank' class="work__button">
                         loja-games <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -494,7 +494,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://github.com/valterchess/farmacia-gen" class="work__button">
+                    <a href="https://github.com/valterchess/farmacia-gen" target='_blank' class="work__button">
                         farmacia-gen <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -504,7 +504,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://github.com/valterchess/farmacia-gen" class="work__button">
+                    <a href="https://github.com/valterchess/farmacia-gen" target='_blank' class="work__button">
                         starter: TypeScript API + Nest.js <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -514,7 +514,7 @@
 
                     <h3 class="work__title">Backend</h3>
 
-                    <a href="https://github.com/valterchess/loteria-basica-api" class="work__button">
+                    <a href="https://github.com/valterchess/loteria-basica-api" target='_blank' class="work__button">
                         número de loteria api <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
