add new projects

--- a/index.html
+++ b/index.html
@@ -420,6 +420,16 @@
                 </div>
 
                 <div class="work__card mix front">
+                    <img src="blob:https://vercel.com/7e24e593-aa37-4757-bf8b-4d3f05b061a3" alt="" class="work__img">
+
+                    <h3 class="work__title">Frontend</h3>
+
+                    <a href="https://genesis-game-zeta.vercel.app/" target='_blank' class="work__button">
+                        Genius Game <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix front">
                     <img src="https://i.imgur.com/0LoHeUP.png" alt="" class="work__img">
 
                     <h3 class="work__title">Frontend</h3>
@@ -435,7 +445,17 @@
                     <h3 class="work__title">Frontend</h3>
 
                     <a href="https://desafio-qr-code.vercel.app" target='_blank' class="work__button">
-                        Desafios - Frontend <i class='bx bx-right-arrow-alt work__icon'></i>
+                        Desafios - QR-code <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix front">
+                    <img src="https://raw.githubusercontent.com/valterchess/desafio-nft/main/design/desktop-preview.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Frontend</h3>
+
+                    <a href="https://desafio-nft.vercel.app/" target='_blank' class="work__button">
+                        Desafios - NTF <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
@@ -520,7 +540,7 @@
                 </div>
 
             </div>
-            <!--  -->
+            <!-- -->
 
         </section>
 
