add tag reactive manifesto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="https://www.linkedin.com/in/valter-silva-5a44b1171/" class="nav__logo">Valter Silva</a>
-
+            <a href="https://www.reactivemanifesto.org/pt-BR" target="_blank"> <img
+                    style="border: 0; position: fixed; right: 0; top:0; z-index: 9000"
+                    src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-black-right.png">
+            </a>
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -239,7 +242,7 @@
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
-                             <div class="skills__data">
+                            <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
@@ -397,7 +400,7 @@
         <!--=============== WORK ===============-->
         <section class="work section" id="work">
             <span class="section__subtitle">Meu portfolio</span>
-            <h2 class="section__title">Projetos recentes</h2>   
+            <h2 class="section__title">Projetos recentes</h2>
             <div class="work__filters">
                 <span class="work__item active-work" data-filter="all">todos</span>
                 <span class="work__item" data-filter=".api">Backend</span>
@@ -450,7 +453,8 @@
                 </div>
 
                 <div class="work__card mix front">
-                    <img src="https://raw.githubusercontent.com/valterchess/desafio-nft/main/design/desktop-preview.jpg" alt="" class="work__img">
+                    <img src="https://raw.githubusercontent.com/valterchess/desafio-nft/main/design/desktop-preview.jpg"
+                        alt="" class="work__img">
 
                     <h3 class="work__title">Frontend</h3>
 
